// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordAvatar Component renders correctly when selected 1`] = `
<div>
  <div
    class="bg-primary400-mode1 flex h-[30px] w-[30px] shrink-0 items-center justify-center rounded-[10px] p-[5px]"
  >
    <svg
      fill="none"
      height="24"
      viewBox="0 0 25 25"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9.8423 17.6296L4.87305 12.6604L5.58655 11.9469L9.8423 16.2026L18.998 7.04688L19.7115 7.76037L9.8423 17.6296Z"
        fill="#08090C"
      />
    </svg>
  </div>
</div>
`;

exports[`RecordAvatar Component renders correctly with avatarSrc 1`] = `
<div>
  <div
    class="relative flex items-center justify-center h-[30px] rounded-[10px] bg-secondary400-mode1 aspect-square p-[2.5px]"
  >
    <div
      class="font-inter text-center font-bold text-[16px] "
      style="color: rgb(0, 0, 0);"
    >
      AB
    </div>
  </div>
</div>
`;

exports[`RecordAvatar Component renders correctly with initials and favorite 1`] = `
<div>
  <div
    class="relative flex items-center justify-center h-[21px] rounded-[7px] bg-secondary400-mode1 aspect-square p-[2.5px]"
  >
    <div
      class="font-inter text-center font-bold text-[12px] "
      style="color: rgb(255, 0, 0);"
    >
      CD
    </div>
    <div
      class="absolute -right-[6px] -bottom-[7px]"
    >
      <svg
        fill="none"
        height="18px"
        viewBox="0 0 25 25"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.13251 19.207L9.37301 13.8935L5.24976 10.3225L10.6805 9.8513L12.8075 4.8418L14.9345 9.8513L20.3653 10.3225L16.242 13.8935L17.4825 19.207L12.8075 16.386L8.13251 19.207Z"
          fill="#B0D944"
        />
      </svg>
    </div>
  </div>
</div>
`;
